--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
         <module>guigu-common</module>
         <module>service-base</module>
         <module>service-core</module>
+        <module>alibaba-easyexcel</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
