--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,8 @@
         <module>service-base</module>
         <module>service-core</module>
         <module>alibaba-easyexcel</module>
+        <module>service-sms</module>
+        <module>service-oss</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
