--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <module>alibaba-easyexcel</module>
         <module>service-sms</module>
         <module>service-oss</module>
+        <module>service-gateway</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
