--- a/service-oss/src/main/resources/application.yml
+++ b/service-oss/src/main/resources/application.yml
@@ -12,6 +12,6 @@ spring:
 aliyun:
   oss:
     endpoint: oss-cn-beijing.aliyuncs.com
-    keyId: LTAI5tS89cyQMN1wfVZMBxQo
-    keySecret: h2yXPRxz7Tu5uf7PJmNo6fw7T9k0RT
+    keyId: 
+    keySecret: 
     bucketName: srb-file-20000401
